# Production-Rag

./: Dockerfile  README.md  backend_architecture.md  config.py  database.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  requirements.txt  retriever.py
chroma_db/: chroma.sqlite3
chroma_db/b67916c7-2500-4c97-9052-6d7ee60d5f6b/: index_metadata.pickle
data_sources/: electricity_demand_forecasting.docx  krestor_labs_master_business_model_v3.csv
txt/: new_doc.txt  sample.txt
